# sigir25-rag-crowdsourcing

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml
data/artifacts/: README.md
data/questionnaires/: base.html  item_pairwise.html  item_response.html  item_statement.html  question.html  questionnaire.html
data/raw/: README.md  llm_ratings_combined.jsonl
data/studies/: .gitignore
data/studies/expert-replication/: expert-replication.json
data/studies/pairwise-preference/: pairwise-preference.json
data/studies/pilots/: pilot-pairwise-preference.json  pilot-pointwise-response.json  pilot-pointwise-statement.json
notebooks/: 1-general-statistics.ipynb  2-citing-behaviour.ipynb  3-readibility.ipynb  4-agreement.ipynb  5-order-effects.ipynb  7-judgment-based-eval.ipynb  8-reference-based-eval.ipynb  9-llm-as-judge.ipynb
scripts/: create_llm_ratings.py  create_llm_responses.py  create_ratings_artifact.py  create_response_artifact.py  create_subsampled_topics.py  create_templates.py
src/: __init__.py
src/aggregation/: __init__.py
src/api/: __init__.py  config.yaml
src/mace/: __init__.py  mace.py  test_mace.py
