[project]
name = "src"
authors = [
    { name = "Lukas Gienapp", email = "lukas.gienapp@uni-leipzig.de" },
]
description = "Simple collector API that streams form responses to an sqlite DB"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "annotated-types~=0.7.0",
    "fastapi~=0.115.2",
    "pydantic~=2.9.2",
    "pydantic_core~=2.23.4",
    "python-dotenv~=1.0.1",
    "python-multipart==0.0.18",
    "slowapi~=0.1.9",
    "SQLAlchemy~=2.0.35",
    "sqlmodel~=0.0.22",
    "uvicorn[standard]~=0.31.0",
]
dynamic = ["version"]


[build-system]
requires = ["setuptools~=69.0", "setuptools-scm~=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["build", "venv", "notebooks", "data", "frontend"]

[tool.setuptools_scm]
